--- a/index.html
+++ b/index.html
@@ -77,22 +77,27 @@
             <div class="servico" onclick="openWhatsApp('Montagem de PC')">
                 <h3>Montagem de PC</h3>
                 <img class="icones" src="PNG/MontagemBG.png" alt="Montagem de PC">
-                <p>Realizamos a montagem do seu computador, basta já possuir as peças!</p>
+                <p>Realizamos a montagem do seu computador, basta já possuir as peças!<br><br><i class="precosservicos">R$ 100,00</i></p>
             </div>
             <div class="servico" onclick="openWhatsApp('Limpeza de PC')">
                 <h3>Limpeza de PC</h3>
                 <img class="icones" src="PNG/LimpezaBG.png" alt="Limpeza de PC">
-                <p>Realizamos a limpeza interna e externa do seu computador, eliminando poeira e melhorando o desempenho.</p>
+                <p>Realizamos a limpeza interna e externa do seu computador, eliminando poeira e melhorando o desempenho.<br><br><i class="precosservicos">R$ 150,00</i></p>
             </div>
             <div class="servico" onclick="openWhatsApp('Formatação de PC')">
                 <h3>Formatação de PC</h3>
                 <img class="icones" src="PNG/FormataçaoBG.png" alt="Formatação de PC">
-                <p>Formatamos seu computador, instalando o sistema operacional e otimizando seu uso para melhor desempenho.</p>
+                <p>Formatamos seu computador, instalando o sistema operacional e otimizando seu uso para melhor desempenho. <br><br><i class="precosservicos">R$ 50,00</i></p>
             </div>
             <div class="servico" onclick="openWhatsApp('Monte seu PC')">
                 <h3>Monte seu PC</h3>
                 <img class="icones" src="PNG/MontagemGuiadaBG.png" alt="Monte seu PC">
-                <p>Ajudamos você a montar seu computador! Informe as peças e nós compraremos. Seu computador chegará montado em sua casa.</p>
+                <p>Ajudamos você a montar seu computador! Informe as peças e nós compraremos. Seu computador chegará montado em sua casa. <br><br><i class="precosservicos">Faça seu orçamento!</i></p>
+            </div>
+            <div class="servico promocao" onclick="openWhatsApp('Promoção de Natal')">
+                <h3>Promoção de Natal</h3>
+                <img class="icones" src="PNG/NatalSite.png" alt="Promoção de Natal">
+                <p>Limpeza e formatação por apenas <br><br><i class="precosservicos">R$ 160,00</i></p>
             </div>
         </div>
     </section>
